// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineBigram test LineBigram has image snapshot 1`] = `
<div
  className="mt-2"
>
  <div
    className="font-weight-bold"
  >
    title
     
    <img
      alt="name"
      src={
        Object {
          "process": [Function],
        }
      }
    />
     
  </div>
  <div>
    <b>
      Name:
    </b>
     
    name
  </div>
  <div
    className="font-weight-bold"
  >
    Questions:
  </div>
  <div />
</div>
`;

exports[`LineBigram test LineBigram has no image snapshot 1`] = `
<div
  className="mt-2"
>
  <div
    className="font-weight-bold"
  >
    title
     
    <img
      alt="name"
      src=""
    />
     
  </div>
  <div>
    <b>
      Name:
    </b>
     
    name
  </div>
  <div
    className="font-weight-bold"
  >
    Questions:
  </div>
  <div />
</div>
`;
